[tool.poetry]
name = "repl_pygame_PyGame2"
version = "0.1.0"
description = ""
authors = ["Umair Shaheen <umairshaheen7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
